fix: fix overflowing category list in desktop header

--- a/src/components/drawers/DesktopHeaderDrawer/DesktopHeaderDrawer.module.scss
+++ b/src/components/drawers/DesktopHeaderDrawer/DesktopHeaderDrawer.module.scss
@@ -19,14 +19,15 @@
     justify-content: center;
     align-self: center;
     width: 100%;
-    height: 50px;
+    max-width: 100%;
+    flex-wrap: wrap;
+    min-height: 50px;
     transition: height 0.2s;
     transition-delay: 300ms;
-    overflow: hidden;
 
     &.hidden-list {
       height: 0;
-      transition: height 0.1s;
+      transition: height 0.2s;
       transition-delay: 0;
     }
 
@@ -35,6 +36,7 @@
       align-self: center;
       justify-content: center;
       height: 100%;
+      width: 120px;
       padding: 5px 0;
     }
   }
